--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -13,5 +13,5 @@ launch_config:
   use_rplidar: true       # Set to true to launch RPLIDAR node
   use_serial_talker: true # Set to true to launch serial talker
   use_x_serial: false     # Set to true to launch x_serial
-  use_slam_pi: true      # Set to true to launch SLAM Toolbox on the RPi
+  use_slam_pi: false      # Set to true to launch SLAM Toolbox on the RPi
   use_nav2_pi: false      # Set to true to launch Nav2 (Navigation Stack) on the RPi
