--- a/dabom_ws/src/dabom_bringup/package.xml
+++ b/dabom_ws/src/dabom_bringup/package.xml
@@ -5,10 +5,8 @@
   <maintainer email="christopher@karg.ca">Christopher</maintainer>
   <license>Apache-2.0</license>
 
-  <!-- Build tool dependencies -->
-  <buildtool_depend>ament_python</buildtool_depend> <!-- Change to ament_python -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <!-- Runtime dependencies -->
   <depend>rclcpp</depend>
   <depend>inv_kin</depend>
   <depend>odom</depend>
@@ -19,16 +17,8 @@
   <depend>slam_toolbox</depend>
   <depend>rviz2</depend>
   <depend>joy</depend>
-  <depend>xbox_controller</depend>
-
-  <!-- Dependencies for launch functionality -->
-  <depend>launch</depend>
-  <depend>launch_ros</depend>
-
-  <!-- Optional dependencies -->
-  <exec_depend>python3-yaml</exec_depend>
 
   <export>
-    <build_type>ament_python</build_type> <!-- Change to ament_python -->
+  <build_type>ament_python</build_type>
   </export>
 </package>
