--- a/dabom_ws/src/serial_comm/package.xml
+++ b/dabom_ws/src/serial_comm/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>serial_comm</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Package for serial communication with Arduino, including publishing encoder values and velocities.</description>
   <maintainer email="38130223+Tmoemes@users.noreply.github.com">mees</maintainer>
   <license>Apache-2.0</license>
 
@@ -11,6 +11,7 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>serial</exec_depend>
 
   <!-- Testing dependencies -->
