--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -3,7 +3,7 @@ launch_config:
   use_joy: true          # Set to true to launch joystick control
   use_slam: false         # Set to true to launch SLAM Toolbox on the control computer
   use_nav2: false         # Set to true to launch Nav2 (Navigation Stack) on the control computer
-  use_rviz: true         # Set to true to launch RViz for visualization
+  use_rviz: false         # Set to true to launch RViz for visualization
   use_gazebo: false       # Set to true to launch robot state publisher
   use_robot_state: true 
   use_xbox: false         # Set to true to launch Xbox controller
