--- a/dabom_ws/src/neo_kinematics_mecanum/CMakeLists.txt
+++ b/dabom_ws/src/neo_kinematics_mecanum/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(neo_kinematics_mecanum2)
+project(neo_kinematics_mecanum)
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
 endif()
